--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -28,8 +28,8 @@
     <fileTypeFactory implementation="com.cmakeplugin.CMakeFileTypeFactory"/>
     <lang.parserDefinition language="CMake" implementationClass="com.cmakeplugin.CMakeParserDefinition"/>
     <lang.syntaxHighlighterFactory key="CMake" implementationClass="com.cmakeplugin.CMakeSyntaxHighlighterFactory"/>
-    <colorSettingsPage implementation="com.cmakeplugin.CMakeColorSettingsPage"/>
-
+<!--    <colorSettingsPage implementation="com.cmakeplugin.CMakeColorSettingsPage"/>
+-->
   </extensions>
 
   <actions>
