--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>artsiomch.cmake</id>
   <name>CMake simple highlighter</name>
-  <version>0.0.3</version>
+  <version>0.1.0</version>
   <vendor email="achapialiou@gmail.com" url="http://github.com/ArtsiomCh/CMake">Artsiom Chapialiou</vendor>
 
   <description><![CDATA[
@@ -21,17 +21,8 @@
        on how to target different products -->
   <!-- uncomment to enable plugin in all products
   -->
-  <depends>com.intellij.modules.java</depends>
-
-  <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
-    <fileTypeFactory implementation="com.cmakeplugin.CMakeFileTypeFactory"/>
-    <lang.parserDefinition language="CMake" implementationClass="com.cmakeplugin.CMakeParserDefinition"/>
-    <lang.syntaxHighlighterFactory key="CMake" implementationClass="com.cmakeplugin.CMakeSyntaxHighlighterFactory"/>
-    <colorSettingsPage implementation="com.cmakeplugin.CMakeColorSettingsPage"/>
-    <lang.braceMatcher language="CMake" implementationClass="com.cmakeplugin.CMakeBraceMatcher"/>
-
-  </extensions>
+  <depends optional="true" config-file="idea.xml">com.intellij.modules.java</depends>
+  <depends optional="true" config-file="clion.xml">com.intellij.modules.clion</depends>
 
   <actions>
     <!-- Add your actions here -->
