--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -63,15 +63,13 @@
     <colorSettingsPage implementation="com.cmakeplugin.CMakeColorSettingsPage"/>
 
     <psi.referenceContributor implementation="com.cmakeplugin.CMakeReferenceContributor" />
+    <lang.findUsagesProvider implementationClass="com.cmakeplugin.CMakeFindUsagesProvider"  />
 
     <annotator language="CMake"
                factoryArgument="Annotator"
                factoryClass="com.cmakeplugin.CMakeExtensionFactory"  />
     <lang.refactoringSupport language="CMake"
                              factoryArgument="refactoringSupport"
-                             factoryClass="com.cmakeplugin.CMakeExtensionFactory"  />
-    <lang.findUsagesProvider language="CMake"
-                             factoryArgument="findUsagesProvider"
                              factoryClass="com.cmakeplugin.CMakeExtensionFactory"  />
   </extensions>
 
