--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,13 @@ dependencies {
 }
 
 intellij {
-//    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
-    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-1/182.5262.2'
+    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
+//    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-1/182.5262.2'
 //    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-0/182.5314842/'
     downloadSources false
 //    alternativeIdePath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
 //    version '183.4284.36'
-//    plugins 'PsiViewer:191.4212'
+    plugins 'PsiViewer:191.4212'
 //    plugins 'PsiViewer:192-SNAPSHOT'
     updateSinceUntilBuild false
 }
