--- a/build.gradle
+++ b/build.gradle
@@ -42,21 +42,21 @@ idea {
 
 dependencies {
     compileOnly fileTree('MyJars')
-    compile fileTree('lib')
+//    compile fileTree('lib')
     compile group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
+    compile ('org.avaje:avaje-agentloader:3.0.1') {exclude group: 'org.slf4j'}
 //    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
+    testCompile fileTree('lib-test')
 }
 
 intellij {
-    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
-//    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-1/182.5262.2'
-//    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-0/182.5314842/'
+//    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
+    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-2/192.5728.98'
     downloadSources false
 //    alternativeIdePath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
 //    version '183.4284.36'
-    plugins 'PsiViewer:191.4212'
+//    plugins 'PsiViewer:191.4212'
 //    plugins 'PsiViewer:192-SNAPSHOT'
     updateSinceUntilBuild false
 }
