move simple-highlighter into gradle sub-project/module

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.jetbrains.intellij.tasks.RunIdeTask
-
 // Get latest SNAPSHOT for gradle-intellij-plugin: https://github.com/JetBrains/gradle-intellij-plugin#snapshot-version
 buildscript {
     repositories {
@@ -17,112 +15,17 @@ buildscript {
     }
 }
 
-plugins {
-    id 'java'
-//    id 'org.jetbrains.intellij' version '0.4.9'
-    id 'idea'
-}
+subprojects {
 
-apply plugin: 'org.jetbrains.intellij'
+    apply plugin:  'java'
+    apply plugin:  'idea'
 
-//version '1.0-SNAPSHOT'
-sourceCompatibility = 1.8
+    apply plugin: 'org.jetbrains.intellij'
 
-repositories {
-    mavenCentral()
-}
+    version '192.dev1'
+    sourceCompatibility = 1.8
 
-sourceSets.main.java.srcDirs = ['src/main/java','gen']
-idea { 
-    module {
-//        sourceDirs += file('gen')
-        generatedSourceDirs += file('gen')
+    repositories {
+        mavenCentral()
     }
-}
-
-dependencies {
-    compileOnly fileTree('MyJars')
-//    compile fileTree('lib')
-    compile group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
-    compile ('org.avaje:avaje-agentloader:3.0.1') {exclude group: 'org.slf4j'}
-//    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile fileTree('lib-test')
-}
-
-intellij {
-//    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
-    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-2/192.5728.98'
-    downloadSources false
-//    alternativeIdePath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
-//    version '183.4284.36'
-//    plugins 'PsiViewer:191.4212'
-//    plugins 'PsiViewer:192-SNAPSHOT'
-    updateSinceUntilBuild false
-}
-/*
-patchPluginXml {
-    changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
-}
-*/
-
-jar {
-    manifest{
-        attributes "Agent-Class": "com.cmakeplugin.agent.CMakeInstrumentationAgent",
-            "Can-Retransform-Classes": "true",
-            "Can-Redefine-Classes": "true"
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
-task runCLion_191(type: RunIdeTask){
-    dependsOn(prepareSandbox)
-    ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-2/191.7479.33/'
-}
-
-task runCLion_183(type: RunIdeTask){
-    dependsOn(prepareSandbox)
-    ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-1/183.5429.37/'
-}
-
-task Copy192(type: Copy) {
-    dependsOn(prepareSandbox)
-    from "${intellij.sandboxDirectory}/plugins192"
-    into "${intellij.sandboxDirectory}/plugins"
-}
-
-task runCLion_192(type: RunIdeTask){
-    ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-0/192.5728.70/'
-    jbrVersion '11_0_2b159'
-    dependsOn(Copy192)
-} 
-
-task Copy_182(type: Copy) {
-    dependsOn(prepareSandbox)
-    from "${intellij.sandboxDirectory}/plugins182"
-    into "${intellij.sandboxDirectory}/plugins"
-}
-
-task runAndroidStudio_33_182(type: RunIdeTask){
-    ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-0/182.5314842/'
-    dependsOn(Copy_182)
-}
-
-task runAndroidStudio_34_183(type: RunIdeTask){
-    dependsOn(prepareSandbox)
-    ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-1/183.5522156/'
-}
-
-task runAndroidStudio_35_191(type: RunIdeTask){
-    dependsOn(prepareSandbox)
-    ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-2/191.5675373/'
-}
-
-task runIdea_182(type: RunIdeTask){
-    dependsOn(prepareSandbox)
-    ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-1/182.5262.2/'
 }
