split into :simple-highlighter and :plus plugins

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.intellij.tasks.RunIdeTask
+
 // Get latest SNAPSHOT for gradle-intellij-plugin: https://github.com/JetBrains/gradle-intellij-plugin#snapshot-version
 buildscript {
     repositories {
@@ -27,5 +29,76 @@ subprojects {
 
     repositories {
         mavenCentral()
+    }
+
+    dependencies {
+        compileOnly fileTree("$rootProject.projectDir/MyJars")
+//    compile fileTree('lib')
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile fileTree("$rootProject.projectDir/lib-test")
+    }
+
+    intellij {
+        pluginName "$rootProject.name-$project.name"
+//    localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
+        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-2/192.5728.98'
+        downloadSources false
+//    alternativeIdePath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
+//    version '183.4284.36'
+//    plugins 'PsiViewer:191.4212'
+        plugins /*'PsiViewer:192-SNAPSHOT', */'java'
+        updateSinceUntilBuild false
+    }
+
+    jar {
+        archivesBaseName = intellij.pluginName
+    }
+
+    task runCLion_191(type: RunIdeTask){
+        dependsOn(prepareSandbox)
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-2/191.7479.33/'
+    }
+
+    task runCLion_183(type: RunIdeTask){
+        dependsOn(prepareSandbox)
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-1/183.5429.37/'
+    }
+
+    task Copy192(type: Copy) {
+        dependsOn(prepareSandbox)
+        from "${intellij.sandboxDirectory}/plugins192"
+        into "${intellij.sandboxDirectory}/plugins"
+    }
+
+    task runCLion_192(type: RunIdeTask){
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-0/192.5728.70/'
+        jbrVersion '11_0_2b159'
+        dependsOn(Copy192)
+    }
+
+    task Copy_182(type: Copy) {
+        dependsOn(prepareSandbox)
+        from "${intellij.sandboxDirectory}/plugins182"
+        into "${intellij.sandboxDirectory}/plugins"
+    }
+
+    task runAndroidStudio_33_182(type: RunIdeTask){
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-0/182.5314842/'
+        dependsOn(Copy_182)
+    }
+
+    task runAndroidStudio_34_183(type: RunIdeTask){
+        dependsOn(prepareSandbox)
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-1/183.5522156/'
+    }
+
+    task runAndroidStudio_35_191(type: RunIdeTask){
+        dependsOn(prepareSandbox)
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-2/191.5675373/'
+    }
+
+    task runIdea_182(type: RunIdeTask){
+        dependsOn(prepareSandbox)
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-1/182.5262.2/'
     }
 }
